# epistemic-weight-engine

./: LICENSE  README.md  ewe_checkpoint.json  ewe_combined_results.json  ewe_gce_experiment.py  ewe_results.json  pyproject.toml  requirements.txt  setup.py  train.py
ewe/: __init__.py  gate.py  losses.py  trainer.py
experiments/: train_ablation.py  train_adaptive_ewe.py  train_cifar100n.py  train_cifar100n_v2.py  train_dividemix.py  train_lm_approval_bias.py  train_lm_ewe_tuned.py  train_synthetic_noise.py
experiments/results/: dividemix_results.json  ewe_ablation_results.json  ewe_adaptive_results.json  ewe_cifar100n_results.json  ewe_cifar100n_v2_results.json  ewe_results.json  lm_approval_bias_results.json  lm_tuned_results.json  synthetic_noise_results.json
