[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ewe-gate"
version = "0.2.0"
description = "Epistemic Weight Engine — Adaptive pre-update gating for noise-robust AI learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Maheep Purohit", email = "purohitmaheep@gmail.com"}
]
keywords = ["noisy labels", "robust learning", "label noise", "approval bias", "RLHF"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/maheeppurohit/epistemic-weight-engine"
Paper = "https://doi.org/10.5281/zenodo.18940011"
